<resources>
    <string name="app_name">Student_Marks_System</string>
    <string name="subTitle">Student Marks Calculation</string>
    <string name="student_name">Student name</string>
    <string name="marks1">Marks 1</string>
    <string name="marks2">Marks 2</string>
    <string name="marks3">Marks 3</string>
    <string name="total">Total</string>
    <string name="grade">Grade</string>
    <string name="avg">Avg</string>
</resources>